Addressed a warning.